# unboxer

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml  tests.yml
api/: index.html
assets/: layout.css
config/: index.html
docs/: api.md  config.md  index.md  requirements.txt  usage.md
faq/: index.html
search/: search_index.json
src/box2csv/: __init__.py  cldf.py  cli.py  helpers.py
src/box2csv/data/: config.yaml  interlinear_config.yaml  shoebox.yaml  toolbox.yaml
src/unboxer/: __init__.py  cldf.py  cli.py  helpers.py
src/unboxer/data/: interlinear_config.yaml  shoebox.yaml  toolbox.yaml
tests/: test_corpus.py
tests/data/: inflectionalcategories.csv  inflectionalvalues.csv  inflections.csv  languages.csv  pem_lex_sb.db  pem_lex_tb.txt  pem_txt_tb.txt  pemon.yaml  pemontexts.db  yekwana.txt  yekwana.yaml
usage/: index.html
