[metadata]
author = Florian Matter
author_email = florianmatter@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Extract shoebox and toolbox data to CSV files.
keywords =
    shoebox
    toolbox
long_description = file: README.md
long_description_content_type = text/markdown
name = box2csv
project_urls =
    Bug Tracker = https://github.com/fmatter/box2csv/issues
url = https://github.com/fmatter/box2csv
version = 0.0.1.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires = 
    colorlog
    click
    pandas >= 1.3.5
    python-slugify >= 6.1.2
    cldfbench >= 1.13.0
    pycldf >= 1.29.0
    importlib-resources >= 5.10.0

[options.entry_points]
console_scripts =
    box2csv=box2csv.cli:main


[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]==1.7.7
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    sphinxcontrib-napoleon
    tox
    myst_parser
    flake8
    twine
    jinja2
    keepachangelog
publishing =
    twine
    wheel

[options.packages.find]
include = box2csv, box2csv.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = box2csv
src_paths = box2csv,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    box2csv

[coverage:report]
show_missing = true